added social media meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
@@ -9,14 +10,20 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-	<link rel="stylesheet" href="https://use.typekit.net/hyn4cgn.css">
-	
-	<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+		integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+	<link rel="stylesheet preload" href="https://use.typekit.net/hyn4cgn.css">
+
+	<meta property="og:title" content="Sam's Space">
+	<meta property="og:description" content="A place about me to talk and draw and other stuff.">
+	<meta property="og:image" content="./images/portfolioBG_BW.png">
+	<meta property="og:url" content="http://threesam.com">
+	<meta name="twitter:card" content="summary_large_image">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
 </body>
+
 </html>
