--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
 	<meta property="og:title" content="Sam's Space">
 	<meta property="og:description" content="A place about me to talk and draw and other stuff.">
-	<meta property="og:image" content="./images/portfolioBG_BW.png">
+	<meta property="og:image" content="images/hero.jpg">
 	<meta property="og:url" content="http://threesam.com">
 	<meta name="twitter:card" content="summary_large_image">
 
