--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
 		integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-	<link rel="stylesheet preload" href="https://use.typekit.net/hyn4cgn.css">
+	<link rel="stylesheet" href="https://use.typekit.net/hyn4cgn.css">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
