--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,12 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<meta name="description" content="An incessantly updated, over-engineered playground for testing out new ideas">
 
 	<title>Sam's Space</title>
 
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
-		integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-	<link rel="stylesheet" href="https://use.typekit.net/hyn4cgn.css">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -19,9 +17,9 @@
 	<link rel="manifest" href="/site.webmanifest">
 
 	<meta property="og:title" content="Sam's Space">
-	<meta property="og:description" content="A place about me to talk and draw and other stuff.">
+	<meta property="og:description" content="An incessantly updated, over-engineered playground for testing out new ideas">
 	<meta property="og:image" content="./images/hero.jpg">
-	<meta property="og:url" content="http://threesam.com">
+	<meta property="og:url" content="https://threesam.com">
 	<meta name="twitter:card" content="summary_large_image">
 
 	<script defer src='/build/bundle.js'></script>
