--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
 	<meta property="og:url" content="https://threesam.com">
 	<meta name="twitter:card" content="summary_large_image">
 
+	<script src="https://cdn.lr-ingest.io/LogRocket.min.js" crossorigin="anonymous"></script>
+	<script>window.LogRocket && window.LogRocket.init('5hvhrv/portfolio');</script>
+
 	<script defer src='/build/bundle.js'></script>
 </head>
 
