--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 	<script>window.LogRocket && window.LogRocket.init('5hvhrv/portfolio');</script>
 
 	<script defer src='/build/bundle.js'></script>
-	<script async defer data-website-id="3ca56d24-5813-4dad-9f0a-d8f0e13dfc84" src="http://localhost:3000/umami.js"></script>
+	<script async defer data-website-id="184dd099-3a0f-4429-a049-5b16f731288a" src="https://threesam-umami.herokuapp.com/umami.js"></script>
 </head>
 
 <body>
