--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<meta name="description" content="An incessantly updated, over-engineered playground for testing out new ideas">
 
 	<title>Sam's Space</title>
 
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+		integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://use.typekit.net/hyn4cgn.css">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -17,16 +19,12 @@
 	<link rel="manifest" href="/site.webmanifest">
 
 	<meta property="og:title" content="Sam's Space">
-	<meta property="og:description" content="An incessantly updated, over-engineered playground for testing out new ideas">
+	<meta property="og:description" content="A place about me to talk and draw and other stuff.">
 	<meta property="og:image" content="./images/hero.jpg">
-	<meta property="og:url" content="https://threesam.com">
+	<meta property="og:url" content="http://threesam.com">
 	<meta name="twitter:card" content="summary_large_image">
 
-	<script src="https://cdn.lr-ingest.io/LogRocket.min.js" crossorigin="anonymous"></script>
-	<script>window.LogRocket && window.LogRocket.init('5hvhrv/portfolio');</script>
-
 	<script defer src='/build/bundle.js'></script>
-	<script async defer data-website-id="1b553f09-088c-4a1d-9fc1-5e739e5f3156" src="https://threesam-umami.herokuapp.com/umami.js"></script>
 </head>
 
 <body>
