--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 
-	<script async defer data-website-id="4af80623-b608-4851-bb32-e31f3f67ce24" data-do-not-track="true" src="https://threesam-umami.herokuapp.com/umami.js"></script>
+	<script async defer data-website-id="4af80623-b608-4851-bb32-e31f3f67ce24" data-do-not-track="true" src="https://analytics.threesam.com/umami.js"></script>
 
 	<meta property="og:title" content="Sam's Space">
 	<meta property="og:description" content="A place about me to talk and draw and other stuff.">
